[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yaml_to_disk"
dynamic = ["version"]
authors = [
  { name = "Matthew McDermott", email = "mattmcdermott8@gmail.com" },
]
description = "A simple utility to define directory structures in YAML and populate them on disk in a single command."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "pyyaml>=6,<7",
  "pytest>=8,<10",
]

[tool.setuptools_scm]

[project.optional-dependencies]
parquet = ["pyarrow>=15"]
toml = ["tomli-w>=1,<2"]

[dependency-groups]
dev = [
  # Runtime test tooling
  "pytest-cov>=5",
  "pytest-doctestplus>=1.2",
  "pretty-print-directory>=0.1.3",
  # pre-commit orchestrator — major version pinned to match what CI runs
  "pre-commit<4",
  # Exact pins for tools that also run in pre-commit hooks, so local dev
  # sees the same diffs CI does.
  "ruff==0.14.5",
  "docformatter==1.7.7",
  "codespell==2.4.1",
  "nbstripout==0.8.2",
  "nbqa==1.9.1",
  "shellcheck-py==0.11.0.1",
  # mdformat + the plugin set pre-commit also installs. Pinning the plugin
  # set here keeps `uv run mdformat ...` consistent with the hook.
  "mdformat==0.7.22",
  "mdformat-ruff",
  "mdformat-gfm",
  "mdformat-gfm-alerts",
  "mdformat-tables",
  "mdformat-frontmatter",
  "mdformat-config",
  "mdformat-mkdocs",
  "mdformat-toc",
]

[tool.coverage.run]
source = ["yaml_to_disk"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "pragma: no cover",
]

[project.urls]
Homepage = "https://github.com/mmcdermott/yaml_to_disk"
Issues = "https://github.com/mmcdermott/yaml_to_disk/issues"

[project.entry-points."yaml_to_disk.file_types"]
txt = "yaml_to_disk.file_types.txt:TextFile"
json = "yaml_to_disk.file_types.json:JSONFile"
pkl = "yaml_to_disk.file_types.pkl:PickleFile"
yaml = "yaml_to_disk.file_types.yaml:YAMLFile"
csv = "yaml_to_disk.file_types.csv:CSVFile"
tsv = "yaml_to_disk.file_types.tsv:TSVFile"
parquet = "yaml_to_disk.file_types.parquet:ParquetFile"
toml = "yaml_to_disk.file_types.toml:TOMLFile"

[project.entry-points.pytest11]
yaml_to_disk = "yaml_to_disk.pytest_plugin"

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--doctest-modules",
  "--ignore=docs",
  "--doctest-glob=*.md",
  "--doctest-plus",
]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]
doctest_plus = true

[tool.ruff]
target-version = "py310"
line-length = 110

# Enable linters
[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "DTZ", # flake8-datetimez
  "RUF", # Ruff-specific rules
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "N",   # pep8-naming
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Unused imports in __init__ files

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["N*"]
